added prod configurations
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/openshift/templates/issuer-api/config/bcvcpilot/invite-email.html
+++ b/openshift/templates/issuer-api/config/bcvcpilot/invite-email.html
@@ -10,19 +10,15 @@
     out in the Pan-Canadian Trust Framework.
   </p>
   <p>
-    There are three steps:
+    There are two steps:
   </p>
   <ol>
     <li>
       Setup by installing a trusted digital wallet app on your smartphone. 
     </li>
     <li>
-      Obtain your proof of concept verified person digital credential from the BC POC
-      issuing service using information you supply via your BC Services Mobile Card.
-    </li>
-    <li>
-      Use your verified person digital credential at one or more of the proof of concept demonstration
-      services that have been provided by participating DIACC members.
+      Obtain your proof of concept BC VC Pilot credential from the BC POC
+      issuing service.
     </li>
   </ol>
   <p>
@@ -38,9 +34,6 @@
             >Instructions are here</a
           >.
           Other agents are TBD and are expected to be created by POC participants.
-    </li>
-    <li>
-      Install and activate your BC Services Mobile Card if you have not already done so.
     </li>
   </ol>
     </li>
@@ -58,40 +51,9 @@
     <b><a href="${inviteUrl}">${inviteUrl}</a></b>
   </p>
   <p>
-    Login using your BC Services Card and click conntinue to provide the issuing service with your BC Services Card information.
-  </p>
-  <p>
     You can use this link multiple times to allow for demonstrations you may want
     to do. If you find that the link has expired, please request a new invitation
     by sending an email to
     <a href="mailto:${sender}">${sender}</a>.
   </p>
-  <p>
-    <b>Step 3: Use your proof of concept verified person digital credential at proof of concept demonstration
-      services.</b>
-  </p>
-  <p>
-    We have found it works best if you use a second device such as a laptop or
-    tablet for running the demo services. Please close and restart your browser
-    to be sure that any previous logins and sessions are cleared away before running the demo
-    services.
-  </p>
-  <p>
-    Currently the following services are available:
-  </p>
-  <ol>
-    <li>
-      Demo Test Service - from your laptop or tablet click on the following link:
-      <a href="https://healthbc-issuer.apps.silver.devops.gov.bc.ca/"
-        >https://healthbc-issuer.apps.silver.devops.gov.bc.ca/</a
-      >. After the page loads click the button for verifiable credential and scan
-      the QR code with your personal agent app that you installed in Step 1: Setup
-      above.
-    </li>
-  
-    <li>
-      Others demo services are TBD with expectation that POC participants will
-      provide examples.
-    </li>
-  </ol>
   
