updated landing page and email content
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/openshift/templates/issuer-web/config/bcvcpilot/terms-and-conditions.html
+++ b/openshift/templates/issuer-web/config/bcvcpilot/terms-and-conditions.html
@@ -1,15 +1,31 @@
 <style type="text/css">
   .content {
     padding: 25px;
-  }
-  .paragraph {
-    text-align: justify;
+    text-align: left;
   }
 </style>
 
 <div class="content">
-	<h2>BC VC Pilot Credential</h2>
-	<p><em>Please <a href="https://vonx.io/getwallet" target="_blank">download a digital wallet</a> before using this service. You must also have test BC Services Mobile app data. If you need that, please contact [details TBD].</em></p>
-	<p>This is a Proof of Concept service operated for the purposes of the BC VC Pilot Program. It demonstrates how an individual can receive a verifiable credential issued by an authority (the Government of BC) containing information that authority knows about you.</p>
-	<p>When the QR code to receive your digital credential is displayed, use your digital wallet app (you have one right? If not, please <a href="https://vonx.io/getwallet" target="_blank">download a digital wallet</a>) to scan the code and follow the instructions in your wallet app.</p>
+  <h2>Person credential invitation</h2>
+  <p>This is to get your invitation credential. This is the first step to getting your Person credential. Use your
+    Person credential to prove your identity online and get access to services online.</p>
+  <p><b>Before you start, you’ll need:</b>
+  <ul>
+    <li>
+      BC Wallet app installed on your mobile device. Don’t have it? <a
+        href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-wallet#get">Get the BC Wallet app</a>.
+    </li>
+    <li>
+      BC Service Card app set up on your mobile device, including your identity verified. Don’t have it? <a
+        href="https://www2.gov.bc.ca/gov/content/governments/government-id/bcservicescardapp/download-app">Get the BC
+        Services Card app</a>.
+    </li>
+  </ul>
+  </p>
+  <p>This is a pilot program intended to demonstrate the Person credential and it is still being developed. The Person
+    credential is only meant to be used with collaborating services and does not replace your physical ID. The
+    invitation credential is intended to invite individuals to the pilot program and is not intended to be part of the
+    final product. The invitation credential can only be issued once. Please do not delete the invitation credential
+    from your wallet until the pilot program is over. If you experience any issues or would like to provide feedback,
+    please contact <a href="mailto:DITRUST@gov.bc.ca">DITRUST@gov.bc.ca</a>.</p>
 </div>
