--- a/openshift/templates/issuer-api/config/bcvcpilot/invite-email.html
+++ b/openshift/templates/issuer-api/config/bcvcpilot/invite-email.html
@@ -1,53 +1,34 @@
 <p>
-    You have received this invitation from ${sender}. If you have any questions
-    please contact them by sending an email to
-    <a href="mailto:${sender}">${sender}</a>.
-  </p>
-  <p>
-    This proof of concept is facilitated by the Digital ID and Authentication
-    Council of Canada. The purpose of this proof of concept is to provide an
-    example demonstration of how digital id for verified persons could work as set
-    out in the Pan-Canadian Trust Framework.
-  </p>
-  <p>
-    There are two steps:
-  </p>
-  <ol>
-    <li>
-      Setup by installing a trusted digital wallet app on your smartphone. 
-    </li>
-    <li>
-      Obtain your proof of concept BC VC Pilot credential from the BC POC
-      issuing service.
-    </li>
-  </ol>
-  <p>
-    <b>Step 1: Setup</b>
-  </p>
-  <ol>
-    <li>
-      Install a smartphone app that you will use as your trusted digital wallet for
-      receiving, holding, and sharing verifiable credentials that are issued to
-      you.
-          <a
-            href="https://github.com/bcgov/issuer-kit/blob/main/docs/GettingApp.md"
-            >Instructions are here</a
-          >.
-          Other agents are TBD and are expected to be created by POC participants.
-    </li>
-  </ol>
-    </li>
-  
-  </ol>
-  <p>
-    <b>Step 2: Obtain your proof of concept verified person digital credential.</b>
-  </p>
-  <p>
-      Using your laptop or a tablet device click the following link to start the process
-      for issuing your digital ID for verifiable person:
-    >
-  </p>
-  <p>
-    <b><a href="${inviteUrl}">${inviteUrl}</a></b>
-  </p>
-  
+  You’re invited to add your Person credential to your BC Wallet. As this is a pilot program, you’ll need an invitation
+  credential to add your Person credential to your wallet.
+</p>
+
+<p>
+  <b>What you'll need</b>
+</p>
+<ul>
+  <li>
+    BC Wallet app installed on your mobile device. Don’t have it? <a
+      href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-wallet#get">Get the BC Wallet app</a>.
+  </li>
+  <li>
+    BC Service Card app set up on your mobile device. Don’t have it? <a
+      href="https://www2.gov.bc.ca/gov/content/governments/government-id/bcservicescardapp/download-app">Get the BC
+      Services Card app</a>.
+  </li>
+</ul>
+<p>
+  <b>Next Steps</b>
+</p>
+<ol>
+  <li>
+    <b>Add your invitation credential</b> to your BC Wallet from this link and follow the steps there:
+    <a href="${inviteUrl}">${inviteUrl}</a><br />
+    You need to be invited to add your Person credential to your BC Wallet. You’ll use this invitation credential to
+    prove you’ve been invited to participate in the pilot.
+  </li>
+  <li>
+    <b>Tap the “Get your Person credential” button</b> now featured in the home screen of your BC Wallet then follow the
+    steps there.
+  </li>
+</ol>
