--- a/services/vc-authn-oidc/templates/ver_config_explorer.html
+++ b/services/vc-authn-oidc/templates/ver_config_explorer.html
@@ -51,7 +51,7 @@
           <img src="../static/img/header-logo.svg" alt="BC Government" />
           <span>VC-AuthN Presentation Request Explorer</span>
         </a>
-        <a href="https://github.com/bcgov/vc-authn-oidc">
+        <a href="https://github.com/openwallet-foundation/acapy-vc-authn-oidc">
           <i class="bi bi-github text-white fs-3 mt-n4"></i>
         </a>
       </div>
